--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GoCommando" version="0.3" targetFramework="net40" />
+  <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net40" />
 </packages>
